--- a/404.html
+++ b/404.html
@@ -1,18 +1,16 @@
 ---
 layout: page
 title: Page Not Found
-background: grey
 ---
 
-<section class="page-section">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <h2 class="section-heading text-uppercase">404 - Page Not Found</h2>
-        <h3 class="section-subheading text-muted">
-          The requested page could not be found.
-        </h3>
-      </div>
+<div id="404" class="row">
+  <div class="col-lg-12 text-center">
+    <div class="mb-4">
+      <img class="img-fluid" style="width:100%; max-width:420px;" src="/assets/img/memes/et-bike.gif">
     </div>
+    <h2 class="section-heading text-uppercase">Whoops! - Page Not Found</h2>
+    <h4 class="section-subheading text-muted">The requested page could not be found.</h4>
+    <h5><a href="/">Wanna go home?</a></h5>
   </div>
-</section>
+</div>
+
